--- a/client/src/app/component/cart/cart.component.html
+++ b/client/src/app/component/cart/cart.component.html
@@ -1,1 +1,59 @@
-<p>cart works!</p>
+<div id="background_color" class="py-3">
+    <div class="container">
+      <div class="row gy-4 align-items-center">
+        <div class="d-flex align-items-center justify-content-center">
+          <div class="col-6">
+            <div class="card border-0 rounded-4">
+              <div class="card-body p-3">
+                <form [formGroup]="cartForm" (ngSubmit)="onAddToCart()">
+                  <h2 class="text-center">Shipping Order</h2>
+  
+                  <!-- shippingAddress -->
+                  <div class="mb-3">
+                    <label for="shippingAddress" class="form-label">Shipping Address</label>
+                    <input
+                      type="text"
+                      id="shippingAddress"
+                      name="shippingAddress"
+                      class="form-control"
+                      formControlName="shippingAddress"
+                      [(ngModel)]="shippingAddress"
+                    />
+                    <div
+                      *ngIf="
+                        cartForm.controls['shippingAddress'].touched &&
+                        cartForm.controls['shippingAddress'].invalid
+                      "
+                    >
+                      <div class="required">Shipping Address is required</div>
+                    </div>
+                  </div>
+  
+              
+  
+              
+  
+                  <!-- Submit and Reset Buttons -->
+                  <button
+                    type="submit"
+                    class="btn btn-primary"
+                    [disabled]="!cartForm.valid"
+                  >
+                    Add to Cart
+                  </button>
+                  <button
+                    (click)="onReset()"
+                    type="button"
+                    class="btn btn-outline-danger m-2"
+                  >
+                    Reset
+                  </button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
