--- a/client/src/app/component/dashboard/dashboard.component.html
+++ b/client/src/app/component/dashboard/dashboard.component.html
@@ -27,12 +27,10 @@
     <ul class="navbar-nav me-auto">
       <li class="nav-item">
         <a href="/cart" class="nav-link text-white" title="Cart">
-          <i class="bi bi-cart3 me-2"></i>Cart
+          <i class="bi bi-cart3 me-2"></i>Order
         </a>
       </li>
-      <li class="nav-item">
-        <a href="/order" class="nav-link text-white" title="Order">Order</a>
-      </li>
+    
     </ul>
 
     <!-- Right Section: Profile -->
